First HTML Changes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -15,15 +17,8 @@
 	</head>
 	<body>
 			<header>
-				<h1><a href="index.html">Sartre’s List</a></h1>
-				<h2>Better-Dressed People</h2>
+				<h1>Wedding Site</h1>
 				<nav>
-					<a href="#">Women’s</a>
-					<a href="#">Men’s</a>
-					<a href="#">On the Street</a>
-					<a href="#">The Catwalk</a>
-					<a href="#">AdWatch</a>
-					<a href="#">About</a>
 				</nav>
 			</header>
 			
