--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	</head>
 	<body>
+
+	
 			<header>
-				<h1>Wedding Site</h1>
+				<div class='img_container'>
+					<img src="photos/devon-beach.jpg" class = "background">
+					<img src="photos/photo_2.jpg" class = "profile">
+				</div>
 				<nav>
-				</nav>
+
+				<nav>
 			</header>
 			
 			<main>
