--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 	
 			<header>
 				<div class='img_container'>
-					<img src="photos/devon-beach.jpg" class = "background">
 					<img src="photos/photo_2.jpg" class = "profile">
 				</div>
+				<h1>Shane and Layla 2014</h1>
+			
 				<nav>
 
 				<nav>
@@ -30,22 +31,20 @@
 			
 			<main>
 				<article>
+					<h2>Save the date!</h2>
+					<p>We're extremely excited to announce our engagement and to invite all our friends and family to celebrate with us. We're planning on having 2 celebrations:</p>
+					<hr class="hr1">
+					<ol>
+						<li><span class = "listHead">Main Ceremony:</span> August 23rd, 2014 - Devon, United Kingdom</li>
+						<li><span class = "listHead">US Reception:</span> September 13th, 2014 - New York City, United States</li>
+					</ol>
+					<hr class="hr1">
+					<p>At the moment both venues are TBD, but we'll be updating and expanding this site with more information as our plans develop. We would love for everyone to be able to join us for the main ceremony in Devon, but, as we know that this will not be possible for everyone, we are also planning on holding a reception in New York City a few weeks following the Devon ceremony.</p>
 				</article>
 
-				<article>
-				</article>
-	</main>
+			</main>
 
 			<aside>
-				<article>
-				</article>
-
-				<article>
-				</article>
-
-				<article>
-				</article>
-
 			</aside>
 
 			<footer>
