--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 			<header>
 				<div class='img_container'>
-					<img src="photos/photo_2.jpg" class = "profile">
+					<img src="photos/photo_2.JPG" class = "profile">
 				</div>
 				<h1>Shane and Layla 2014</h1>
 			
