Core Site Built

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h1>Shane and Layla 2014</h1>
 			
 				<nav>
-
+					<a href="index.html">Home Page</a>
 				<nav>
 			</header>
 			
@@ -41,6 +41,12 @@
 					<hr class="hr1">
 					<p>At the moment both venues are TBD, but we'll be updating and expanding this site with more information as our plans develop. We would love for everyone to be able to join us for the main ceremony in Devon, but, as we know that this will not be possible for everyone, we are also planning on holding a reception in New York City a few weeks following the Devon ceremony.</p>
 				</article>
+
+				<article>
+					<h2>RSVP</h2>
+					<p>Please click below to fill out our RSVP form.  It would be greatly appreciated if you would please let us know whether you're planning on coming to the Devon ceremony or the New York City reception.</p>
+					<a href="Form.html">RSVP</a>
+				</article>	
 
 			</main>
 
