--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 
 	
 			<header>
-				<div class='img_container'>
-					<img src="photos/photo_2.JPG" class = "profile">
-				</div>
-				<h1>Shane and Layla 2014</h1>
+				<img src="photos/shaylaftw.jpg">
+				
 			
 				<nav>
 					<a href="index.html">Home Page</a>
