--- a/thank_you.html
+++ b/thank_you.html
@@ -15,10 +15,8 @@
 	</head>
 
 	<header>
-		<div class='img_container'>
-			<img src="photos/photo_3.JPG" class = "profile">
-		</div>
-		<h1>Shane and Layla 2014</h1>
+		<img src="photos/shaylaftw.jpg">
+		
 	
 		<nav>
 			<a href="index.html">Home Page</a>
