--- a/index.html
+++ b/index.html
@@ -30,19 +30,24 @@
 			<main>
 				<article>
 					<h2>Save the date!</h2>
-					<p>We're extremely excited to announce our engagement and to invite all our friends and family to celebrate with us. We're planning on having 2 celebrations:</p>
+					<p>Hello dearest darling family and friends! We're extremely excited to announce our engagement after a whirlwind romance of a mere 8 years, and we would like to invite all of you join us at our nuptials this summer.</p>
+					<br>
+					<p>Our main ceremony will be held in Devon, UK, and we would love for you all to join us in the beautiful place where Layla was born. However, as we know that this may not possible for everyone, we are also planning on holding a reception in New York City a few weeks following the Devon ceremony (also, y’know, why not party twice?).</p>
+
+					<p>The two events will be:</p>
+
 					<hr class="hr1">
 					<ol>
 						<li><span class = "listHead">Main Ceremony:</span> August 23rd, 2014 - Devon, United Kingdom</li>
-						<li><span class = "listHead">US Reception:</span> September 13th, 2014 - New York City, United States</li>
+						<li><span class = "listHead">US Reception:</span> September 6th, 2014 - New York City, United States</li>
 					</ol>
 					<hr class="hr1">
-					<p>At the moment both venues are TBD, but we'll be updating and expanding this site with more information as our plans develop. We would love for everyone to be able to join us for the main ceremony in Devon, but, as we know that this will not be possible for everyone, we are also planning on holding a reception in New York City a few weeks following the Devon ceremony.</p>
+					<p>At the moment both venues are as yet a mystery even to us, but we'll be updating and expanding this site with more information as our plans develop, so please do keep checking back!</p>
 				</article>
 
 				<article>
 					<h2>RSVP</h2>
-					<p>Please click below to fill out our RSVP form.  It would be greatly appreciated if you would please let us know whether you're planning on coming to the Devon ceremony or the New York City reception.</p>
+					<p>Please click below to fill out our RSVP form.  t would be massively appreciated if you would please let us know whether you're planning on coming to the Devon ceremony or the New York City reception  as soon as possible so we can plan accordingly.</p>
 					<a href="Form.html">RSVP</a>
 				</article>	
 
