Layla Copy Changes Proper

--- a/Form.html
+++ b/Form.html
@@ -86,7 +86,7 @@ target="hidden_iframe" onsubmit="submitted=true;"><div role="list">
 </div>
 <div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
 <select name="entry.1143800347" id="entry_1143800347" aria-label="Which Event Will You Be Attending?  "><option value=""></option>
-<option value="Devon Ceremony - August 23, 2014">Devon Ceremony - August 23rd, 2014</option> <option value="New York City Reception - September 13th, 2014">New York City Reception - September 6th, 2014</option> <option value="I Would Like to Attend Both">I Would Like to Attend Both</option></select>
+<option value="Devon Ceremony - August 23rd, 2014">Devon Ceremony - August 23rd, 2014</option> <option value="New York City Reception - September 6th, 2014">New York City Reception - September 6th, 2014</option> <option value="I Would Like to Attend Both">I Would Like to Attend Both</option></select>
 
 </div></div></div>
 <input type="hidden" name="draftResponse" value="[,,&quot;4347244191857584646&quot;]
