--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	
 		<title>Shane And Layla 2014</title>
 		
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 		
@@ -31,9 +32,7 @@
 				<article>
 					<h2>Save The Date</h2>
 					<p>Hello dearest darling family and friends! We're extremely excited to announce our engagement after a whirlwind romance of a mere 8 years, and we would like to invite all of you join us at our nuptials this summer.</p>
-					<br>
 					<p>Our main ceremony will be held in Devon, UK, and we would love for you all to join us in the beautiful place where Layla was born. However, as we know that this may not possible for everyone, we are also planning on holding a reception in New York City a few weeks following the Devon ceremony (also, y’know, why not party twice?).</p>
-					<br>
 					<p>The two events will be:</p>
 
 				
