--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
 
 	
 			<header>
-				<img src="photos/shaylaftw.jpg">
-				
-			
-				<!--<nav>
-					<a href="index.html">Home Page</a>
-				<nav> -->
+				<img src="photos/circle pic.png" class = "profilepic">
 			</header>
 			
 			<main>
