Comment out buttons that don't have content yet

--- a/devon.html
+++ b/devon.html
@@ -32,8 +32,8 @@
 	
 				<button id = 'devonTransportationButton'>Transportation</button>	
 				<button id = 'devonAccomodationButton'>Accomodation</button>
-				<button id = 'devonLocalAreaButton'>Local Area</button>	
-				<button id = 'devonTheMainEventButton'>The Main Event</button>	
+				<!--<button id = 'devonLocalAreaButton'>Local Area</button>	
+				<button id = 'devonTheMainEventButton'>The Main Event</button>	-->
 				
 			</nav>
 			
