--- a/new_york.html
+++ b/new_york.html
@@ -36,7 +36,7 @@
 					<div id = "nydeets1" class = "mainsection">
 					<div class = "section_divider">
 						<article>
-							<h3>New York</h3>
+							<h3>New York - October 12th</h3>
 							<p>Our New York ceremony will be held at <a href = "http://www.thedumboloft.com/">The Dumbo Loft</a> in Brooklyn. The venue is easily accessible from the F train at York Street and the A and C trains at High Street.</p>
 						</article>
 						
