Removed Fizz Wine

--- a/devon.html
+++ b/devon.html
@@ -146,7 +146,7 @@
 							<ul>
 								<li><span class = "bold">2:30pm</span> - Arrival</li>
 								<li><span class = "bold">3:00pm</span> - Ceremony</li>
-								<li><span class = "bold">3:30pm</span> - Pimms, Fizz Wine &amp; Games</li>
+								<li><span class = "bold">3:30pm</span> - Pimms &amp; Games</li>
 								<li><span class = "bold">4:30pm</span> - Food!</li>
 								<li><span class = "bold">6:45pm</span> - Cake! NomNomNom</li>
 								<li><span class = "bold">7:30pm</span> - Dance Party</li>
