Updated jquery link

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<link rel="stylesheet" href="css/style.css">
 		
 		<!-- For Testing Only -->
-		<script src="js/jquery.min.js"></script>
+		<!-- <script src="js/jquery.min.js"></script>-->
 
-	 	<!-- <script src="http://code.jquery.com/jquery-latest.min.js"></script> -->
+	 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	</head>
 	<body>
 
