Updated Gift Registry

--- a/new_york.html
+++ b/new_york.html
@@ -83,7 +83,7 @@
 					<div class = "section_divider">
 						<article>
 							<h3>Gifts</h3>
-							<p>We hope you can join us in celebrating our marriage! Please know that your presence is the best gift you could provide. Please do not feel obligated to give anything else. But should you feel inclined, we are very much looking forward to a honeymoon and any contribution towards that will always be sincerely appreciated.</p>
+							<p>We hope you can join us in celebrating our marriage! Please know that your presence is the best gift you could provide. Please do not feel obligated to give anything else. But should you feel inclined, we are very much looking forward to a honeymoon and any contribution towards that will always be sincerely appreciated. If you do not feel comfortable with that, we have also put together a <a href = 'http://www.amazon.com/registry/wedding/20KGZEWA9EHTU' target = "_blank">Wedding Registry on Amazon.</a></p>
 						</article>
 						
 					</div>
