--- a/new_york.html
+++ b/new_york.html
@@ -71,7 +71,7 @@
 								<li><span class = "bold">6:00pm</span> - Sundae Bar</li>
 								<li><span class = "bold">6:30pm</span> - Speeches</li>
 								<li><span class = "bold">7:00pm</span> - Cut the Doughnut</li>
-								<li><span class = "bold">11:00pm</span> - Carriages</li>
+								<li><span class = "bold">12:00am</span> - Carriages</li>
 							</ul>
 
 						</article>
